--- a/client/templates/posts.html
+++ b/client/templates/posts.html
@@ -16,13 +16,13 @@
 <template name="item">
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h3 class="panel-title">{{title}}</h3> Fecha: {{date}}
+			<h3 class="panel-title">{{title}}</h3> Fecha: {{current_date}}
 		</div>
 		<div class="panel-body">
 			{{text}}
 		</div>
 		<div class="panel-footer">
-				Autor: <b>{{autor}}</b>
+				Autor: <b>{{autors}}</b>
 				<div class="row">
 					{{coments}}
 				</div>
