--- a/client/templates/registerposts.html
+++ b/client/templates/registerposts.html
@@ -1,4 +1,5 @@
 <template name="registerposts">
+	{{#if currentUser}}
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 			<form action="" id="formregister" method="POST" class="form-horizontal" role="form">
@@ -8,14 +9,11 @@
 	
 			<input type="text" name="title" id="inputTitle" class="form-control" value="" placeholder="Titulo"  title="">
 			
-			<input type="text" name="autor" id="inputTitle" class="form-control" value="" placeholder="Autor"  title="">
-			
-			<input type="text" name="fecha" id="fecha" class="form-control" value="" placeholder=""  title="">
+			<input type="text" name="autor" id="inputTitle" class="form-control"  disabled="true" value="{{correo}}" placeholder="Autor"  title="">
 			
 			<textarea name="text" id="input" class="form-control" rows="3" ></textarea>
 			
 			
-			<input type="text" name="coments" id="inputTitle" class="form-control" value="" placeholder="Comentarios"  title="">
 			
 			<div class="form-group">
 				<div class="col-sm-10 col-sm-offset-2">
@@ -25,5 +23,5 @@
 	</form>		
 		</div>
 	</div>
-	
+	{{/if}}
 </template>
