--- a/client/templates/itemarticulos.html
+++ b/client/templates/itemarticulos.html
@@ -6,10 +6,14 @@
 <template name="itemplantilla">
 	
 	<div class="panel panel-default">
+		
 		<div class="panel-heading">
-			<a href="/articulo/{{_id}}"><h3 class="panel-title">{{title}}</h3> Fecha: {{current_date}}</a> 
+			<a href="/articulo/{{_id}}"><h3 class="panel-title">
+			{{title}}</h3> Fecha: {{current_date}}</a> 
+
 		</div>
 		<div class="panel-body">
+			
 			<img src="{{images}}" width="400px" alt="">
 			{{text}}
 		</div>
