--- a/client/templates/registerposts.html
+++ b/client/templates/registerposts.html
@@ -1,4 +1,5 @@
 <template name="registerposts">
+	<!-- <button type="button" id="addroles" class="btn btn-default">addRoles</button>-->
 	{{#if currentUser}}
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
