--- a/client/templates/posts.html
+++ b/client/templates/posts.html
@@ -1,4 +1,39 @@
-<template name="posts">
+<template name="modaledit">
+	<div class="modal fade" id="modal_edit_role">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title">Editar Publicación</h4>
+				</div>
+				<div class="modal-body">
+					<form action="" method="POST" id="formEdit" role="form">
+					
+						<div class="form-group">
+							<label for="">Titulo</label>
+							<input type="text" name="title" class="form-control" value="{{title}}" id="" placeholder="Title">
+						</div>
+						<div class="form-group">
+							<label for="">Text</label>
+							<textarea name="text" id="input" class="form-control" rows="3" required="required">
+								{{text}}
+							</textarea>
+						</div>
+					
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<button type="button" id="editbtn" class="btn btn-primary">Save changes</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</template>
+<template name="posts">	
+	{{#if isInRole 'editPublish'}}
+		{{>modaledit}}
+	{{/if}}
 	<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 		<ul>
 		{{#each DATOS}}
@@ -17,6 +52,11 @@
 	<div class="panel panel-default">
 		<div class="panel-heading">
 			<a href="/articulo/{{_id}}"><h3 class="panel-title">{{title}}</h3> Fecha: {{current_date}}</a> 
+			
+			{{#if isInRole 'editPublish'}}
+				<button id="btneditar" type="button" class="btn btn-warning">
+				<span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Editar</button>
+			{{/if}}
 		</div>
 		<div class="panel-body">
 			<img src="{{images}}" width="400px" alt="">
